Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22138

Qt version in autodetected Kit has wrong bitness

XMLWordPrintable

    • Windows
    • e94f5b496ecd9ca212009bd24368265e1df8199b (qt-creator/qt-creator/master)

      1. Have MSVC2015 installed.
        I have the 32-bit compiler and the 64-bit cross-compiler.
      2. Use that to build a 64-bit version of Qt.
        Qt 5.12.1 here.
      3. Have the "bin" directory from that build of Qt in your PATH variable.
      4. Start a 32-bit build of Creator with empty settings, e.g. by passing the parameter -settingspath <empty directory>.
      5. Go to "Tools" -> "Options..." -> "Kits" -> "Kits".
        There is an autodetected Kit with a warning icon. The warning is there because the bitnesses don't match: The Qt version has uses 64 bits whereas the assigned debugger and compilers are the 32-bit versions.
        Creator found the 64 bit versions as well but did not assign them to the kit. Selecting them from the respective combo boxes makes the warning icon disappear and gives you a usable kit.

      Creator should automatically assign the right Qt version.

        For Gerrit Dashboard: QTCREATORBUG-22138
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes